<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_poster" />
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/judul_film"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/img_photo"
        android:layout_marginLeft="26dp" />
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/description"
        android:layout_marginLeft="26dp"
        android:layout_toEndOf="@id/img_photo" />

</RelativeLayout>